--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "notifications",
     "email",
     "sms",
-    "push"
+    "push",
+    "webhook"
   ],
   "author": "",
   "license": "MIT",
-  "dependencies": {}
+   "dependencies": {
+    "nodemailer": "^6.9.1"
+  },
+  "devDependencies": {
+  }
 }
