--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
+# Dependency directories
 node_modules/
+
+# Environment configuration
+.env
+.env.local
+.env.*.local
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
