--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "notification-system",
   "version": "1.0.0",
-  "description": "A modular notification system supporting multiple channels",
+  "description": "A flexible notification system for Node.js applications",
   "main": "index.js",
     "scripts": {
     "start": "node index.js",
@@ -16,10 +16,11 @@
     "push",
     "webhook"
   ],
-  "author": "",
+ "author": "",
   "license": "MIT",
   "dependencies": {
-    "dotenv": "^16.5.0",
-    "nodemailer": "^6.9.1"
+    "dotenv": "^16.3.1",
+    "nodemailer": "^6.9.4",
+    "twilio": "^4.11.2"
   }
 }
